Agregue palabra "Moficación"

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <section>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate temporibus alias cumque suscipit ullam modi unde accusantium consectetur labore, facilis, quasi minima obcaecati libero deserunt placeat quam blanditiis doloremque explicabo!</p>
                 </section>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum inventore itaque eum culpa dolorum voluptatibus dicta quia officia cum laboriosam quod quaerat necessitatibus nesciunt ab, est vel. Dolores, officia excepturi.</p>
-                <section>
-
+                
+                   <section>
+                       <p>Modificación</p>
                 </section>
             </div>
         </main>
